Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Top bar -->
+     <div class="nav">
+        <a href="#">HOME</a>
+        <a href="#"></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+     </div>
 </body>
 </html>
