Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- Top bar -->
      <div class="nav">
         <a href="#">HOME</a>
-        <a href="#"></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+        <a href="#">SERVICES</a>
+        <a href="#"></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
      </div>
 </body>
 </html>
