Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
      <div class="nav">
         <a href="#">HOME</a>
         <a href="#">SERVICES</a>
-        <a href="#"></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+        <a href="#">PRODUCTS</a>
+        <a href="#">FINANCE</a>
+        <a href="#">CONTACT</a>
+        <a href="#"></a><a href=""></a>
      </div>
 </body>
 </html>
