Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <a href="#">PRODUCTS</a>
         <a href="#">FINANCE</a>
         <a href="#">CONTACT</a>
-        <a href="#"></a><a href=""></a>
+        <a href="#">HELP</a>
+        <a href="#"></a>
      </div>
 </body>
 </html>
