Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">FINANCE</a>
         <a href="#">CONTACT</a>
         <a href="#">HELP</a>
-        <a href="#"></a>
+        <a href="#">LOGOUT</a>
      </div>
 </body>
 </html>
