--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- Top bar -->
+     <div class="top-bar"></div>
      <div class="nav">
         <a href="#">HOME</a>
         <a href="#">SERVICES</a>
