Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <!-- Top bar -->
-     <div class="top-bar"></div>
+     <div class="top-bar">
+        <img src="img/logo.PNG" alt="logo">
+     </div>
      <div class="nav">
         <a href="#">HOME</a>
         <a href="#">SERVICES</a>
