--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <!-- Top bar -->
-     <div class="top-bar">
+     <div class="top-bar"></div>
+     <div class="logo">
         <img src="img/logo.PNG" alt="logo">
      </div>
-     
+
      <div class="nav">
         <a href="#">HOME</a>
         <a href="#">SERVICES</a>
@@ -20,5 +21,6 @@
         <a href="#">HELP</a>
         <a href="#">LOGOUT</a>
      </div>
+
 </body>
 </html>
