Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 </head>
 <body>
     <!-- Top bar -->
-     <div class="top-bar"></div>
-     <div class="logo">
-        <img src="img/logo.PNG" alt="logo">
-     </div>
+     <div class="top-bar">
+        <div class="logo">
+            <img src="img/logo.PNG" alt="logo">
+        </div>
 
-     <div class="nav">
-        <a href="#">HOME</a>
-        <a href="#">SERVICES</a>
-        <a href="#">PRODUCTS</a>
-        <a href="#">FINANCE</a>
-        <a href="#">CONTACT</a>
-        <a href="#">HELP</a>
-        <a href="#">LOGOUT</a>
+        <div class="nav">
+            <a href="#">HOME</a>
+            <a href="#">SERVICES</a>
+            <a href="#">PRODUCTS</a>
+            <a href="#">FINANCE</a>
+            <a href="#">CONTACT</a>
+            <a href="#">HELP</a>
+            <a href="#">LOGOUT</a>
+        </div>
      </div>
 
 </body>
