Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
         </div>
      </div>
 
+     <!-- Banner -->
+    <div class="left-side">
+        <div class="food-grid"></div>
+    </div>
+
 </body>
 </html>
