Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
      <!-- Banner -->
     <div class="left-side">
-        <div class="food-grid"></div>
+        <div class="food-grid">
+            
+        </div>
     </div>
 
 </body>
