Restaurant Management System

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Top Navigation -->
     <div class="top-bar">
-        <img src="img/logo.png" class="logo">
+        <img src="img/logo.PNG" class="logo">
 
         <ul class="menu">
             <li>HOME</li>
@@ -23,7 +23,7 @@
 
     <!-- Banner -->
     <div class="banner">
-        <img src="img/banner.png">
+        <img src="img/pic5.PNG">
     </div>
 
     <!-- Main Content -->
@@ -31,7 +31,7 @@
 
         <!-- Left Images -->
         <div class="left">
-            <img src="img/left.png">
+            <img src="img/pic1.PNG">
         </div>
 
         <!-- Center Content -->
