--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>RECENT ARTICLES</h3>
 
             <div class="article">
-                <img src="img/coffee.png">
+                <img src="img/pic2.PNG">
                 <div>
                     <h4 class="green">COFFEE TEA</h4>
                     <p>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="article">
-                <img src="img/pizza.png">
+                <img src="img/pic3.PNG">
                 <div>
                     <h4 class="green">VEGETARIAN PIZZA</h4>
                     <p>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="article">
-                <img src="img/vegetables.png">
+                <img src="img/pic4.PNG">
                 <div>
                     <h4 class="green">FRESH VEGETABLES</h4>
                     <p>
